[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Snake Body.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemies/snakebody.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 66.0076

[sub_resource type="CircleShape2D" id=2]
radius = 66.0303

[node name="Snake Body" type="KinematicBody2D" groups=["Snake"]]
collision_layer = 512
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.8147e-06, 0.499999 )
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
